hsmc-macros/tests/ui/t9_7_duplicate_default.stderr
error: multiple `default` declarations in state `Parent`
  --> tests/ui/t9_7_duplicate_default.rs:14:9
   |
14 |         default(A);
   |         ^^^^^^^
